2008-06-14  Martin Rudalics  <rudalics@gmx.at>

	* window.el (window--even-window-heights): Even window heights
	only if the selected window is higher than WINDOW.
	Reported by Stephen Berman <Stephen.Berman at gmx.net>.

2008-06-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* info.el (Info-insert-breadcrumbs): Be careful to preserve history.

2008-06-13  Stefan Monnier  <monnier@iro.umontreal.ca>

	* term/linux.el (terminal-init-linux): Load t-mouse.

2008-06-13  Stefan Monnier  <monnier@iro.umontreal.ca>
	        Drew Adams  <drew.adams@oracle.com>

	* info.el (Info-breadcrumbs-depth): New var.
	(Info-insert-breadcrumbs): New function.
	(Info-fontify-node): Use it.
	(Info-mode-map): Move initialization into declaration.

2008-06-13  Ulf Jasper  <ulf.jasper@web.de>

	Rename net/newsticker-*.el to net/newst-*.el.
	* net/newst-backend.el: Rename from net/newsticker-backend.el.
	* net/newst-plainview.el: Rename from net/newsticker-plainview.el.
	* net/newst-reader.el: Rename from net/newsticker-reader.el.
	* net/newst-ticker.el: Rename from net/newsticker-ticker.el.
	* net/newst-treeview.el: Rename from net/newsticker-treeview.el.
	* net/newsticker-backend.el: Rename to net/newst-backend.el.
	* net/newsticker-plainview.el: Rename to net/newst-plainview.el.
	* net/newsticker-reader.el: Rename to net/newst-reader.el.
	* net/newsticker-ticker.el: Rename to net/newst-ticker.el.
	* net/newsticker-treeview.el: Rename to net/newst-treeview.el.

2008-06-13  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/compile.el (compilation-start): Don't disable undo in
	comint buffer.  Don't override the comint-filter with our own.
	(compilation-filter): Change point's insertion-type.

	* comint.el (comint-output-filter): Use copy-marker.

2008-06-13  David Reitter  <david.reitter@gmail.com>

	* textmodes/flyspell.el (mail-mode-flyspell-verify):
	Check message-signature-separator exists before using it.

2008-06-13  Dan Nicolaescu  <dann@ics.uci.edu>
